IPアドレスの設定画面追加。ハードコートしてません。

--- a/src/html/settings.html
+++ b/src/html/settings.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>ログイン</title>
+    <title>設定画面</title>
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Outlined" rel="stylesheet">
     <!--Import materialize.css-->
@@ -15,19 +15,14 @@
 
 <body>
     <script type="text/javascript" src="../JS/materialize.min.js"></script>
-    <script type="text/javascript" src="../../js/ts/login.js"></script>
+    <script type="text/javascript" src="../../js/ts/settings.js"></script>
     <div class="margin">
         <div class="input-field col s6">
-            <input placeholder="メールアドレス" id="login_mail_input" type="email" class="validate">
-            <label for="login_mail_input">メールアドレス</label>
+            <h6>Google Home (Nest Mini)のIPアドレス設定</h6>
+            <input placeholder="IPアドレス" id="ip_address_input" type="text" class="validate">
         </div>
-        <div class="input-field col s6">
-            <input placeholder="パスワード" id="login_pass_input" type="password" class="validate">
-            <label for="login_pass_input">パスワード</label>
-        </div>
-        <a class="waves-effect waves-light btn" onclick="login()"><i class="material-icons left">lock</i>ログイン</a>
+        <a class="waves-effect waves-light btn" onclick="save()"><i class="material-icons left">save</i>保存</a>
     </div>
-
 </body>
 
 </html>
