--- a/src/index.html
+++ b/src/index.html
@@ -23,12 +23,14 @@
 
         <div style="margin-top: 10px;" class="center">
             <a class="waves-effect waves-light btn" id="login_button" onclick="showLoginWindow()"><i
-                    class="material-icons-outlined left">lock</i>ログイン</a>
+                    class="material-icons-outlined">lock</i></a>
+            <a class="waves-effect waves-light btn" id="setting_button" onclick="showSettingWindow()"><i
+                    class="material-icons-outlined">settings</i></a>
         </div>
 
         <div class="input-field col s6 center">
             <input placeholder="smから始まる動画ID" id="video_id_input" type="text" class="validate">
-            <label for="video_id_input">動画ID</label>
+            <!-- <label for="video_id_input">動画ID</label> -->
         </div>
 
         <div style="margin-top: 10px;" class="center">
