次の曲に移動する機能？

--- a/src/index.html
+++ b/src/index.html
@@ -41,10 +41,17 @@
         <div class="content_area">
             <div class="mylistlist" id="mylist_list_div">
             </div>
-            <div class="videolist" id="videolist">
+            <div class="videolist">
+                <div class="switch margin">
+                    <label class="black-text">
+                        次の曲に自動で移動する
+                        <input type="checkbox" id="next_video_check">
+                        <span class="lever"></span>
+                    </label>
+                </div>
+                <div id="videolist">
 
-               
-
+                </div>
             </div>
         </div>
 
