リピート再生つけたい

--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,9 @@
         <div class="margin player_area">
             <img id="player_img" width="80" height="45">
             <h6 id="player_title" class="single">たいとる</h6>
-            <a class="waves-effect waves-light btn grey darken-2" id="playStateButton"><i
+            <a class="waves-effect waves-light btn grey darken-2" style="margin: 5px;" onclick="setRepeat()" id="repeat_button"><i
+                    class="material-icons-outlined">repeat</i></a>
+            <a class="waves-effect waves-light btn grey darken-2" style="margin: 5px;" id="playStateButton"><i
                     class="material-icons-outlined" id="player_controll_icon">play_arrow</i></a>
         </div>
     </div>
